--- a/app_i/src/main/res/values/dimens.xml
+++ b/app_i/src/main/res/values/dimens.xml
@@ -5,4 +5,14 @@
     <!-- nested viewpager. -->
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <!-- alarm. -->
+
+    <dimen name="small_text">12sp</dimen>
+    <dimen name="medium_text">14sp</dimen>
+    <dimen name="large_text">16sp</dimen>
+
+    <dimen name="items_inbetween_space">8dp</dimen>
+    <dimen name="items_top_padding">4dp</dimen>
+
+    <dimen name="timer_icon">20dp</dimen>
 </resources>
