--- a/app_i/src/main/res/layout/activity_main.xml
+++ b/app_i/src/main/res/layout/activity_main.xml
@@ -1,40 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
+    <LinearLayout
+        android:id="@+id/llReminder"
+        style="@style/settings_item_layout">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
+    <TextView
+        android:id="@+id/tv_reminder_header"
+        style="@style/settings_header"
+        android:text="@string/sett_reminder_header" />
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/activity_vertical_margin">
 
-    </com.google.android.material.appbar.AppBarLayout>
+            <TextView
+                android:id="@+id/tv_reminder_label"
+                style="@style/settings_sub_header"
+                android:text="@string/sett_reminder_label" />
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/container"
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/timerSwitch"
+                android:theme="@style/switch_theme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:gravity="center_vertical"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"/>
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_reminder_desc"
+            style="@style/settings_details"
+            android:paddingTop="@dimen/items_top_padding"
+            android:paddingBottom="@dimen/items_inbetween_space"
+            android:text="@string/sett_reminder_desc" />
+
+        <LinearLayout
+            android:id="@+id/ll_set_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/items_inbetween_space">
+
+                <TextView
+                    android:id="@+id/tv_reminder_time_label"
+                    style="@style/settings_sub_header"
+                    android:text="@string/sett_reminder_time_label" />
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/iv_timer"-->
+<!--                    android:layout_width="@dimen/timer_icon"-->
+<!--                    android:layout_height="@dimen/timer_icon"-->
+<!--                    android:layout_alignParentEnd="true"-->
+<!--                    android:layout_alignParentRight="true"-->
+<!--                    android:layout_centerVertical="true"-->
+<!--                    android:src="@drawable/ic_timer" />-->
+
+            </RelativeLayout>
+
+
+            <TextView
+                android:id="@+id/tv_reminder_time_desc"
+                style="@style/settings_details"
+                android:paddingTop="@dimen/items_top_padding"
+                android:paddingBottom="@dimen/items_inbetween_space"
+                android:text="@string/sett_reminder_time_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <View
+        android:background="@color/textColorSecondary"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="0.5dp"/>
 
-<!--    <android.support.design.widget.FloatingActionButton-->
-<!--        android:id="@+id/fab"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="end|bottom"-->
-<!--        android:layout_margin="@dimen/fab_margin"-->
-<!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
+    <LinearLayout
+        style="@style/settings_item_layout">
+        <TextView
+            android:id="@+id/tv_agree_header"
+            style="@style/settings_header"
+            android:paddingBottom="@dimen/items_inbetween_space"
+            android:text="Agreement" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <LinearLayout
+            android:id="@+id/ll_terms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/items_inbetween_space"
+            android:paddingTop="@dimen/items_inbetween_space">
+
+            <TextView
+                android:id="@+id/tv_agree_terms_label"
+                style="@style/settings_sub_header"
+                android:text="Terms &amp; conditions" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_privacy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/items_inbetween_space"
+            android:paddingTop="@dimen/items_inbetween_space">
+
+            <TextView
+                android:id="@+id/tv_agree_privacy_label"
+                style="@style/settings_sub_header"
+                android:text="Privacy policy" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
