--- a/app_i/src/main/res/values/colors.xml
+++ b/app_i/src/main/res/values/colors.xml
@@ -5,8 +5,24 @@
     <color name="colorAccent">#6f6f6e</color>
 
     <color name="colorBackground">#eaeaea</color>
-
+    <!--swipe refresh color-->
     <color name="blue">#5BC0DE</color>
     <color name="red">#FF4081</color>
     <color name="black">#000000</color>
+    <!--alarm color-->
+    <color name="textcolorHeader">#069ECF</color>
+    <color name="textColorPrimary">#000000</color>
+    <color name="textColorSecondary">#A5A5A5</color>
+
+    <!--switch color-->
+
+    <color name="thumb_active">#069ECF</color>
+    <color name="track_active">#66069ECF</color>
+
+    <color name="thumb_inactive">#A5A5A5</color>
+    <color name="track_inactive">#66A5A5A5</color>
+
+
+    <color name="track_color">#66A5A5A5</color>
+    <color name="switch_color">#66A5A5A5</color>
 </resources>
