--- a/app_i/src/main/res/layout/activity_push_history.xml
+++ b/app_i/src/main/res/layout/activity_push_history.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ReadHistoryActivity">
+    tools:context=".PushHistoryActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
