--- a/app_i/src/main/res/values/style.xml
+++ b/app_i/src/main/res/values/style.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:forceDarkAllowed">true</item>
+<!--        <item name="android:forceDarkAllowed">true</item>-->
     </style>
 
     <style name="AppThemeActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -13,7 +13,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:forceDarkAllowed">true</item>
+<!--        <item name="android:forceDarkAllowed">true</item>-->
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -34,7 +34,7 @@
     <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="colorControlNormal">#ffffff</item>
-        <item name="android:forceDarkAllowed">true</item>
+<!--        <item name="android:forceDarkAllowed">true</item>-->
     </style>
     <!-- alarm -->
     <style name="settings_item_layout">
