--- a/app_i/src/main/res/layout/activity_notification_range.xml
+++ b/app_i/src/main/res/layout/activity_notification_range.xml
@@ -1,16 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="通知時間挑整現在是空的喔"
-        android:gravity="left"
-        android:textSize="8dp"
-        android:id="@+id/tmp"
-        tools:ignore="MissingConstraints" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".NotificationRangeActivity">
+
+    <LinearLayout
+        android:id="@+id/llReminder"
+        style="@style/settings_item_layout">
+
+        <TextView
+            android:id="@+id/tv_reminder_header"
+            style="@style/settings_header"
+            android:text="@string/sett_reminder_header" />
+
+
+        <TextView
+            android:id="@+id/tv_reminder_desc"
+            style="@style/settings_details"
+            android:paddingTop="@dimen/items_top_padding"
+            android:paddingBottom="@dimen/items_inbetween_space"
+            android:text="@string/sett_reminder_desc" />
+
+        <LinearLayout
+            android:id="@+id/ll_set_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/items_inbetween_space">
+
+                <TextView
+                    android:id="@+id/tv_reminder_time_label"
+                    style="@style/settings_sub_header"
+                    android:text="@string/sett_reminder_time_label"/>
+
+            </RelativeLayout>
+
+
+            <TextView
+                android:id="@+id/tv_reminder_time_desc"
+                style="@style/settings_details"
+                android:paddingTop="@dimen/items_top_padding"
+                android:paddingBottom="@dimen/items_inbetween_space"
+                android:text="@string/sett_reminder_time_content" />
+
+        </LinearLayout>
+        <Button
+            android:id="@+id/button_s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="儲存設定" />
+
+    </LinearLayout>
+
+<!--    <View-->
+<!--        android:background="@color/textColorSecondary"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0.5dp"/>-->
+
+<!--    <LinearLayout-->
+<!--        style="@style/settings_item_layout">-->
+<!--        <TextView-->
+<!--            android:id="@+id/tv_agree_header"-->
+<!--            style="@style/settings_header"-->
+<!--            android:paddingBottom="@dimen/items_inbetween_space"-->
+<!--            android:text="Agreement" />-->
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/ll_terms"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingBottom="@dimen/items_inbetween_space"-->
+<!--            android:paddingTop="@dimen/items_inbetween_space">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/tv_agree_terms_label"-->
+<!--                style="@style/settings_sub_header"-->
+<!--                android:text="Terms &amp; conditions" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/ll_privacy"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingBottom="@dimen/items_inbetween_space"-->
+<!--            android:paddingTop="@dimen/items_inbetween_space">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/tv_agree_privacy_label"-->
+<!--                style="@style/settings_sub_header"-->
+<!--                android:text="Privacy policy" />-->
+
+<!--        </LinearLayout>-->
+
+<!--    </LinearLayout>-->
+
+</LinearLayout>
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    tools:context=".NotificationRangeActivity">-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView_s"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@id/button_s"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginBottom="31dp"-->
+<!--        android:text="time"-->
+<!--        android:textSize="30sp" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/button_s"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@id/textView_e"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:text="設定每日開始時間" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView_e"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@id/button_e"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginBottom="31dp"-->
+<!--        android:text="time"-->
+<!--        android:textSize="30sp" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/button_e"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:text="設定每日結束時間" />-->
+
+<!--</RelativeLayout>-->
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent">-->
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textAppearance="?android:attr/textAppearanceMedium"-->
+<!--        android:text="通知時間挑整現在是空的喔"-->
+<!--        android:gravity="left"-->
+<!--        android:textSize="8dp"-->
+<!--        android:id="@+id/tmp"-->
+<!--        tools:ignore="MissingConstraints" />-->
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
