--- a/app_i/src/main/res/layout/activity_notification_range.xml
+++ b/app_i/src/main/res/layout/activity_notification_range.xml
@@ -30,7 +30,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -46,6 +45,33 @@
 
             <TextView
                 android:id="@+id/tv_reminder_time_desc"
+                style="@style/settings_details"
+                android:paddingTop="@dimen/items_top_padding"
+                android:paddingBottom="@dimen/items_inbetween_space"
+                android:text="@string/sett_reminder_time_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ee_set_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/items_inbetween_space">
+
+                <TextView
+                    android:id="@+id/tv_reminder_time_label_e"
+                    style="@style/settings_sub_header"
+                    android:text="@string/sett_reminder_time_label_ee"/>
+
+            </RelativeLayout>
+
+
+            <TextView
+                android:id="@+id/ee_tv_reminder_time_desc"
                 style="@style/settings_details"
                 android:paddingTop="@dimen/items_top_padding"
                 android:paddingBottom="@dimen/items_inbetween_space"
