--- a/app_i/src/main/res/layout/activity_all_news.xml
+++ b/app_i/src/main/res/layout/activity_all_news.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewsAllActivity"
+    tools:context=".TestNewsAllActivity"
     android:id="@+id/drawer_layout">
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
