--- a/app_i/src/main/res/layout/activity_notification_range.xml
+++ b/app_i/src/main/res/layout/activity_notification_range.xml
@@ -92,7 +92,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="儲存設定" />
-
+        <Button
+            android:id="@+id/button_restart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="重置問卷發送時間" />
     </LinearLayout>
 
 <!--    <View-->
