--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -12,12 +12,12 @@
     <item android:id="@+id/nav_reschedule"
         android:title="推播紀錄"
         android:icon="@drawable/ic_baseline_edit_notifications_24"/>
-<!--    <item android:id="@+id/nav_contact"-->
-<!--        android:title="ESM頁面"-->
-<!--        android:icon="@drawable/ic_baseline_email_24"/>-->
-<!--    <item android:id="@+id/nav_tmp"-->
-<!--        android:title="DIARY頁面"-->
-<!--        android:icon="@drawable/ic_baseline_email_24"/>-->
+    <item android:id="@+id/nav_contact"
+        android:title="ESM頁面"
+        android:icon="@drawable/ic_baseline_email_24"/>
+    <item android:id="@+id/nav_tmp"
+        android:title="DIARY頁面"
+        android:icon="@drawable/ic_baseline_email_24"/>
 <!--    <item android:id="@+id/clear"-->
 <!--        android:title="清除暫存"-->
 <!--        android:icon="@drawable/ic_baseline_email_24"/>-->
