--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -7,11 +7,14 @@
         android:title="問卷進度"
         android:icon="@drawable/ic_baseline_analytics_24"/>
     <item android:id="@+id/nav_history"
-        android:title="閱讀紀錄"
+        android:title="歷史閱讀紀錄"
         android:icon="@drawable/ic_baseline_history_24"/>
     <item android:id="@+id/nav_reschedule"
-        android:title="推播紀錄"
+        android:title="歷史推播紀錄"
         android:icon="@drawable/ic_baseline_edit_notifications_24"/>
+    <item android:id="@+id/nav_contact"
+        android:title="聯絡我們"
+        android:icon="@drawable/ic_baseline_email_24"/>
 <!--    <item android:id="@+id/nav_contact"-->
 <!--        android:title="ESM頁面"-->
 <!--        android:icon="@drawable/ic_baseline_email_24"/>-->
