--- a/app_i/src/main/res/layout/activity_push_history.xml
+++ b/app_i/src/main/res/layout/activity_push_history.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlayLight">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
