--- a/app_i/src/main/res/layout/timepicker_header.xml
+++ b/app_i/src/main/res/layout/timepicker_header.xml
@@ -9,7 +9,7 @@
         android:textSize="20dp"
         android:text="Remind Me @"
         android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/LightcolorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
