--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -18,9 +18,9 @@
 <!--    <item android:id="@+id/nav_contact"-->
 <!--        android:title="ESM頁面"-->
 <!--        android:icon="@drawable/ic_baseline_email_24"/>-->
-<!--    <item android:id="@+id/nav_tmp"-->
-<!--        android:title="DIARY頁面"-->
-<!--        android:icon="@drawable/ic_baseline_email_24"/>-->
+    <item android:id="@+id/nav_tmp"
+        android:title="DIARY頁面"
+        android:icon="@drawable/ic_baseline_email_24"/>
 
 
 <!--    <item android:id="@+id/clear"-->
