--- a/app_i/src/main/res/values/colors.xml
+++ b/app_i/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#2f2f2f</color>
+    <color name="colorPrimaryDark">#080808</color>
+    <color name="colorAccent">#6f6f6e</color>
+
     <color name="LightcolorPrimary">#2f2f2f</color>
     <color name="LightcolorPrimaryDark">#080808</color>
     <color name="LightcolorAccent">#6f6f6e</color>
