--- a/app_i/src/main/res/layout/activity_loading_page_diary.xml
+++ b/app_i/src/main/res/layout/activity_loading_page_diary.xml
@@ -20,5 +20,16 @@
         android:layout_below="@id/textView"
         android:layout_centerHorizontal="true"
         android:text="開啟問卷" />
-
+    <ProgressBar
+        android:id="@+id/pBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="600dp"
+        android:minHeight="50dp"
+        android:minWidth="200dp"
+        android:max="100"
+        android:indeterminate="false"
+        android:progress="0" />
 </RelativeLayout>
