--- a/app_i/src/main/res/layout/timepicker_header.xml
+++ b/app_i/src/main/res/layout/timepicker_header.xml
@@ -7,7 +7,7 @@
         android:padding="16dp"
         android:gravity="center"
         android:textSize="20dp"
-        android:text="Remind Me @"
+        android:text="一日問卷發送區間"
         android:textStyle="bold"
         android:textColor="@color/LightcolorPrimaryDark"
         android:layout_width="match_parent"
