--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -15,12 +15,12 @@
     <item android:id="@+id/nav_contact"
         android:title="聯絡我們"
         android:icon="@drawable/ic_baseline_email_24"/>
-    <item android:id="@+id/nav_contactt"
-        android:title="ESM頁面"
-        android:icon="@drawable/ic_baseline_email_24"/>
-    <item android:id="@+id/nav_tmp"
-        android:title="DIARY頁面"
-        android:icon="@drawable/ic_baseline_email_24"/>
+<!--    <item android:id="@+id/nav_contactt"-->
+<!--        android:title="ESM頁面"-->
+<!--        android:icon="@drawable/ic_baseline_email_24"/>-->
+<!--    <item android:id="@+id/nav_tmp"-->
+<!--        android:title="DIARY頁面"-->
+<!--        android:icon="@drawable/ic_baseline_email_24"/>-->
 
 
 <!--    <item android:id="@+id/clear"-->
