--- a/app_i/src/main/res/xml/root_preferences.xml
+++ b/app_i/src/main/res/xml/root_preferences.xml
@@ -22,6 +22,10 @@
             app:summary="進入系統通知頁面打開">
             <intent android:action="android.settings.USAGE_ACCESS_SETTINGS"/>
         </Preference>
+        <Preference
+            app:key="PhysicalActivity"
+            android:title="體能紀錄存取權"
+            app:summary="點選允許存取權限"/>
     </PreferenceCategory>
     <PreferenceCategory app:title="基礎設置">
 
