--- a/app_i/src/main/res/menu/menu_sample_news.xml
+++ b/app_i/src/main/res/menu/menu_sample_news.xml
@@ -7,9 +7,9 @@
         android:icon="@drawable/ic_share"
         app:showAsAction="always" />
 
-    <item
-        android:id = "@+id/label"
-        app:showAsAction = "always"
-        android:title = "label" />
+<!--    <item-->
+<!--        android:id = "@+id/label"-->
+<!--        app:showAsAction = "always"-->
+<!--        android:title = "label" />-->
 
 </menu>
