--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -12,15 +12,18 @@
     <item android:id="@+id/nav_reschedule"
         android:title="歷史推播紀錄"
         android:icon="@drawable/ic_baseline_edit_notifications_24"/>
+    <item android:id="@+id/upload"
+        android:title="上傳頁面"
+        android:icon="@drawable/ic_baseline_upload_24"/>
     <item android:id="@+id/nav_contact"
         android:title="聯絡我們"
         android:icon="@drawable/ic_baseline_email_24"/>
-    <item android:id="@+id/nav_contactt"
-        android:title="ESM頁面"
-        android:icon="@drawable/ic_baseline_email_24"/>
-    <item android:id="@+id/nav_tmp"
-        android:title="DIARY頁面"
-        android:icon="@drawable/ic_baseline_email_24"/>
+<!--    <item android:id="@+id/nav_contactt"-->
+<!--        android:title="ESM頁面"-->
+<!--        android:icon="@drawable/ic_baseline_email_24"/>-->
+<!--    <item android:id="@+id/nav_tmp"-->
+<!--        android:title="DIARY頁面"-->
+<!--        android:icon="@drawable/ic_baseline_email_24"/>-->
 
 
 <!--    <item android:id="@+id/clear"-->
