--- a/app_i/src/main/res/menu/menu_sample_news.xml
+++ b/app_i/src/main/res/menu/menu_sample_news.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <item android:id="@+id/web"
+        android:title="Web"
+        android:icon="@drawable/ic_baseline_web_24"
+        app:showAsAction="always" />
     <item android:id="@+id/share"
         android:title="Share"
         android:icon="@drawable/ic_share"
         app:showAsAction="always" />
+
 
 <!--    <item-->
 <!--        android:id = "@+id/label"-->
