--- a/app_i/src/main/res/layout/activity_upload.xml
+++ b/app_i/src/main/res/layout/activity_upload.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/layout_inside"
         tools:context=".UploadPagesActivity"
         android:orientation="vertical"
@@ -13,13 +12,29 @@
         android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
+
+        <TextView
+            android:id="@+id/uptextview"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="上次上傳時間" />
         <Button
             android:id="@+id/upbutton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="上傳"
             android:textAllCaps="false" />
+<!--        <TextView-->
+<!--            android:id="@+id/intro"-->
+<!--            android:layout_width="250dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="上次上傳時間"-->
+<!--            android:layout_alignParentBottom= "true"-->
+<!--            android:padding= "16dp"-->
+<!--            android:scaleType="fitEnd"/>-->
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
