--- a/app_i/src/main/res/layout/activity_news_hybrid.xml
+++ b/app_i/src/main/res/layout/activity_news_hybrid.xml
@@ -41,19 +41,26 @@
                 app:tabTextAppearance="@style/TabLayoutTextStyle"/>
         </com.google.android.material.appbar.AppBarLayout>
 
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/container_hy"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/container_hy"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-    <!--    android:layout_width="wrap_content"-->
-    <!--    android:layout_height="wrap_content"-->
-    <!--    android:layout_gravity="end|bottom"-->
-    <!--    android:layout_margin="@dimen/fab_margin"-->
-    <!--    app:srcCompat="@android:drawable/ic_dialog_email" />-->
-
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:backgroundTint="@color/float_color"
+            app:layout_anchor="@id/container_hy"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/ic_baseline_notification_important_24"
+            app:layout_anchorGravity="bottom|right|end"
+            app:elevation="6dp"
+            android:clickable="true"
+            app:tint="@color/float_icon"
+            android:focusable="true" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 <!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
     </com.recoveryrecord.surveyandroid.example.MySwipeRefreshLayout>
