--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -25,7 +25,7 @@
         android:title="監測"
         android:icon="@drawable/ic_baseline_email_24"/>
 
-<!--    <item android:id="@+id/nav_contactt"-->
+<!--    <item android:id="@+id/nav_esm"-->
 <!--        android:title="ESM頁面"-->
 <!--        android:icon="@drawable/ic_baseline_email_24"/>-->
 <!--    <item android:id="@+id/nav_tmp"-->
