--- a/app_i/src/main/res/xml/root_preferences.xml
+++ b/app_i/src/main/res/xml/root_preferences.xml
@@ -76,10 +76,10 @@
             android:defaultValue="1"
             android:entries="@array/text_entries"
             android:entryValues="@array/text_values"/>
-<!--        <SwitchPreference-->
-<!--            android:defaultValue="false"-->
-<!--            app:key="dark_mode"-->
-<!--            app:title="黑暗模式" />-->
+        <SwitchPreference
+            android:defaultValue="false"
+            app:key="silent"
+            app:title="勿擾問卷作答模式" />
 
 <!--        <Preference-->
 <!--            android:summary="to be continue"-->
